# be-crud-rust

./: Cargo.toml  README.md
migrations/: 20251224074210_create_users_table.sql  20251224074312_create_companies_table.sql
src/: main.rs  technical_notes.md
src/app_middleware/: atuh_middleware.rs
src/app_middleware/jwt_token/: extractor.rs  jwt.rs  mod.rs
src/app_request/: path_uuid.rs
src/app_response/: error.rs
src/company/: mod.rs  routes.rs
src/company/domain/: company.rs
src/company/handler/: company_handler.rs  map_company_error.rs  mod.rs  types.rs
src/company/repository/: company_repository.rs  company_repository_sqlx.rs  helper_query.rs  mod.rs
src/company/usecase/: company_usecase.rs  dto.rs  mod.rs
src/login/handler/: login_handler.rs  mod.rs  types.rs
src/response/: error.rs  success.rs
