[package]
name = "be-inventory-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] } # Untuk serialisasi/deserialisasi dasar
serde_json = "1.0" # Contoh untuk format JSON
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
axum = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"